{
    "version": 1,
    "name": "PlayerInput",
    "maps": [
        {
            "name": "Player",
            "id": "60ac3b56-8fa2-4ecd-ad73-17cd0c0ecf9c",
            "actions": [
                {
                    "name": "TouchPosition",
                    "type": "Value",
                    "id": "e7a09ced-d00b-44cf-84da-13315098621f",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "TouchContact",
                    "type": "Button",
                    "id": "eeb31e32-0abe-4d52-88b3-9c294d2f17c7",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "Press(behavior=2)",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "d15b5b66-ce04-4afc-8cc8-7c6fdbdc46b0",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cb14aeb5-41b9-42ce-93f3-e3dd97eb3e89",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchContact",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}